--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <a class="menu-item" href="./pages/contacto.html"><span>Contacto</span></a>
             </nav>
         </section>
-        <!-- aca agregamos la nav-ham para el sistema mobile -->
+
+        <!-- aca agregue la nav-ham para el sistema MOBILE -->
         <div class="nav-ham">
             <nav class="nav-ham-container">
                 <input type="checkbox" id="menu">
@@ -69,18 +70,39 @@
                 </ul>
             </nav>
         </div>
+        <!-- aca agregue el icono de la lupa que remplaza la barra de exploracion en MOBILE -->
+        <div class="search-icon">
+            <a href=""><img src="./assets/icon/busqueda.png" alt=""></a>
+        </div>
+
     </header>
     <!-- Este main  destaca los 3 productos principales.  Le cambie los bordes y le agregue unas sombras, que repito en las imagenes del sitio. utilice otra imagen para el fondo. 
-    Y en todos las paginas los main son distintos y tienen distintos atributos en css (trate de ser lo mas ordenado con la maquetacion) -->
+    Y en todos las paginas los main son distintos y tienen distintos atributos en css (trate de ser lo mas ordenado con la maquetacion)
+    En este ultimo cambio le agregue un carrusel con bootstrap, igual que en la pagina de servicios -->
     <main>
         <div class="productos-de-portada">
-            <div class="img-portada">
-                <a href="https://litebrush.com.ar/product/hydra" target="_blank"><img class="slider-item"
-                        src="./assets/hydra.jpg" alt="crema-hydra"></a>
-                <a href="https://litebrush.com.ar/product/rmove" target="_blank"><img class="slider-item"
-                        src="./assets/rmove.jpg" alt="crema-rmove"></a>
-                <a href="https://litebrush.com.ar/product/xtend" target="_blank"><img class="slider-item"
-                        src="./assets/xtend.jpg" alt="crema-hydra"></a>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./assets/hydra.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/xtend.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/rmove.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
     </main>
@@ -89,10 +111,16 @@
     <footer>
         <div class="text-footer">
             <p>
-                <span>CASA NEGRA <br> Adress: Campo Salles 1300 <br> Tel: 45678765</span>
+                <span>Casa Negra <br> Adress: Campo Salles 1300 <br> Tel: 45678765</span>
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
 </body>
 <!--  -->
 <!--  -->
