--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -69,34 +69,46 @@
                     </ul>
                 </nav>
             </div>
+
+            <div class="search-icon">
+                <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
+            </div>
     </header>
+    <!-- el agregaddo del otro carrusel -->
     <main class="main-servicios">
-        <section class="section-servicios">
-            <div class="servicio1">
-                <a href=""><img src="../assets/inversiones.jpg" alt=""></a>
-                <div>
-                    <p>INVERTI CON NOSOTROS </p>
+        <div class="productos-de-servcio">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
+                        <h2>INVERSION</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
+                        <h2>CURSOS</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated (1).jpg"
+                            class="d-block w-100" alt="...">
+                        <h2>BRONCEADOS</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
+                        <h2>EVENTOS</h2>
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <div class="servicio2">
-                <a href=""><img src="../assets/foto-chica.jfif" alt=""></a>
-                <div>
-                    <p>BRONCEADOS</p>
-                </div>
-            </div>
-            <div class="servicio3">
-                <a href=""><img src="../assets/capacitacion-modulo-2.jpg" alt=""></a>
-                <div>
-                    <p>CURSOS</p>
-                </div>
-            </div>
-            <div class="servicio4">
-                <a href=""><img src="../assets/waiting-room-with-monitors.jpg" alt=""></a>
-                <div>
-                    <p>EVENTOS</p>
-                </div>
-            </div>
-        </section>
+        </div>
     </main>
     <footer>
         <div>
@@ -105,6 +117,12 @@
             </p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
