--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -19,6 +19,8 @@
     <title>Servicios | Casa Negra</title>
     <link rel="shortcut icon" href="../assets/Sin título.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
