resolucion de tamaños

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -68,6 +68,9 @@
                     </ul>
                 </nav>
             </div>
+             <div class="search-icon">
+                <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
+            </div>
     </header>
     <main class="main-contacto">
         <div>
@@ -75,7 +78,7 @@
                 <div class="ingreso">
                     <label for="registro">Si sos vendedor</label>
                     <input type="email" name="registro" id="registro" placeholder="Ingresa tu Email">
-                    <label for="password"></label>
+                    <label for="password" class="label-pas"></label>
                     <input type="password" id="password" placeholder="Ingresa tu contraseña">
                     <button class="button-form" type="submit">Enviar</button>
                     <label for="">Consultanos</label>
