--- a/pages/productos.html
+++ b/pages/productos.html
@@ -68,6 +68,9 @@
                     </ul>
                 </nav>
             </div>
+            <div class="search-icon">
+                <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
+            </div>
     </header>
     <!-- EN ESTE MAIN SE ALOJA UN BOTON DE DESCARGA PARA UN DOCUMENTO EN PDF CON EL CATALOGO DE LOS PRODUCTOS  -->
     <!-- mas adelante la idea es armar una tienda con un section para clientes y una para vendedores -->
