--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -70,6 +70,9 @@
                 </ul>
             </nav>
         </div>
+        <div class="search-icon">
+            <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
+        </div>
     </header>
     <main>
         <section class="quienes-somos">
