--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -78,38 +78,36 @@
     </header>
     <!-- el agregaddo del otro carrusel -->
     <main class="main-servicios">
-        <div class="productos-de-servcio">
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
-                        <h2>INVERSION</h2>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
-                        <h2>CURSOS</h2>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated (1).jpg"
-                            class="d-block w-100" alt="...">
-                        <h2>BRONCEADOS</h2>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
-                        <h2>EVENTOS</h2>
-                    </div>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated.jpg" class="d-block w-100"
+                        alt="...">
+                    <h2>BRONCEADOS</h2>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-item">
+                    <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
+                    <h2>CURSOS</h2>
+                </div>
+                <div class="carousel-item active">
+                    <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
+                    <h2>INVERSION</h2>
+                </div>
+                        
+                <div class="carousel-item">
+                    <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
+                    <h2>EVENTOS</h2>
+                </div>
+                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
             </div>
+           
         </div>
     </main>
     <footer>
