--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,6 +35,7 @@
                     <input id="search" type="text" name="search" placeholder=" Search">
                 </div>
             </div>
+            <!--  nav-ham  -->
             <section>
                 <nav class="nav-bar">
                     <a class="menu-item" href="../index.html"><span>Home</span></a>
@@ -44,7 +45,7 @@
                     <a class="menu-item" href="./contacto.html"><span>Contacto</span></a>
                 </nav>
             </section>
-            <!-- aca agregamos la nav-ham para el sistema mobile -->
+            <!--  nav-ham  -->
             <div class="nav-ham">
                 <nav class="nav-ham-container">
                     <input type="checkbox" id="menu">
@@ -72,6 +73,7 @@
                 <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
             </div>
     </header>
+    <!-- el formulario para socios y usauarios -->
     <main class="main-contacto">
         <div>
             <form action="" class="formulario">
