--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -37,6 +37,7 @@
                 </div>
             </div>
         </section>
+        <!-- Nav Bar -->
         <section class="section2">
             <nav class="nav-bar">
                 <a class="menu-item" href="../index.html"><span>Home</span></a>
@@ -46,7 +47,7 @@
                 <a class="menu-item" href="./contacto.html"><span>Contacto</span></a>
             </nav>
         </section>
-        <!-- aca agregamos la nav-ham para el sistema mobile -->
+        <!-- Nav Ham-->
         <div class="nav-ham">
             <nav class="nav-ham-container">
                 <input type="checkbox" id="menu">
@@ -70,10 +71,12 @@
                 </ul>
             </nav>
         </div>
+        <!-- el icono de busqueda -->
         <div class="search-icon">
             <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
         </div>
     </header>
+    <!-- En el main de quienes-somos se mantine con el video de presentacion y dos parrafos -->
     <main>
         <section class="quienes-somos">
             <div class="main-quienes">
