--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -38,6 +38,7 @@
                     <input id="search" type="text" name="search" placeholder=" Search">
                 </div>
             </div>
+            <!-- nav-bar  -->
             <section>
                 <nav class="nav-bar">
                     <a class="menu-item" href="../index.html"><span>Home</span></a>
@@ -47,7 +48,7 @@
                     <a class="menu-item" href="./contacto.html"><span>Contacto</span></a>
                 </nav>
             </section>
-            <!-- aca agregamos la nav-ham para el sistema mobile -->
+            <!-- nav-ham  -->
             <div class="nav-ham">
                 <nav class="nav-ham-container">
                     <input type="checkbox" id="menu">
@@ -76,38 +77,40 @@
                 <a href=""><img src="../assets/icon/busqueda.png" alt=""></a>
             </div>
     </header>
-    <!-- el agregaddo del otro carrusel -->
+    <!-- el agregaddo del otro carrusel con los servicios destacados-->
     <main class="main-servicios">
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item">
-                    <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated.jpg" class="d-block w-100"
-                        alt="...">
-                    <h2>BRONCEADOS</h2>
+        <div class="div-servicios">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated.jpg"
+                            class="d-block w-100" alt="...">
+                        <h2>BRONCEADOS</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
+                        <h2>CURSOS</h2>
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
+                        <h2>NEGOCIOS</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
+                        <h2>EVENTOS</h2>
+                    </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
-                    <h2>CURSOS</h2>
-                </div>
-                <div class="carousel-item active">
-                    <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
-                    <h2>INVERSION</h2>
-                </div>
-                        
-                <div class="carousel-item">
-                    <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
-                    <h2>EVENTOS</h2>
-                </div>
-                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-           
         </div>
     </main>
     <footer>
