escritura del alt y detalles todo responsive

--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/hydra.jpg" class="d-block w-100" alt="...">
+                        <a href="https://litebrush.com.ar/product/hydra/"><img src="./assets/hydra.jpg"
+                                class="d-block w-100" alt="Imagen de la crema Hydra"></a>
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/xtend.jpg" class="d-block w-100" alt="...">
+                        <a href="https://litebrush.com.ar/product/xtend/"><img src="./assets/xtend.jpg"
+                                class="d-block w-100" alt="Imagen de la crema extend"></a>
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/rmove.jpg" class="d-block w-100" alt="...">
+                        <a href="https://litebrush.com.ar/product/rmove/"><img src="./assets/rmove.jpg"
+                                class="d-block w-100" alt="Imagen de la crema remove"></a>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
