--- a/pages/productos.html
+++ b/pages/productos.html
@@ -77,7 +77,13 @@
     <main class="main-productos">
         <div class="div-button">
             <button class="button" type="button">
-                <a href="../assets/catalogo.pdf" target="_blank"><span>Descarga Catalogo 2023</span></a>
+                <a href="../assets/catalogo.pdf" target="_blank"><span>Descarga Catalogo Cremas 2023</span></a>
+            </button>
+              <button class="button" type="button">
+                <a href="../assets/catalogo.pdf" target="_blank"><span>Descarga Catalogo Insumos 2023</span></a>
+            </button>
+              <button class="button" type="button">
+                <a href="../assets/catalogo.pdf" target="_blank"><span>Descarga Catalogo Todos los Produtos 2023</span></a>
             </button>
         </div>
     </main>
