--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -82,21 +82,21 @@
         <div class="div-servicios">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
-                    <div class="carousel-item">
+                    <div class="carousel-item active">
                         <img src="../assets/beautiful-woman-model-in-swimminmg-suit-isolated.jpg"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Chica bronceada">
                         <h2>BRONCEADOS</h2>
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/capacitacion-modulo-2.jpg" class="d-block w-100" alt="Reunion de personas en una oficina">
                         <h2>CURSOS</h2>
                     </div>
-                    <div class="carousel-item active">
-                        <img src="../assets/inversiones.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item">
+                        <img src="../assets/inversiones.jpg" class="d-block w-100" alt="Imagen de graficos de negocios">
                         <h2>NEGOCIOS</h2>
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="...">
+                        <img src="../assets/waiting-room-with-monitors.jpg" class="d-block w-100" alt="Reuinio en auditorio con mucha gente">
                         <h2>EVENTOS</h2>
                     </div>
                 </div>
