--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Todos los title con descripcion -->
     <title>Home | Casa Negra</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="shortcut icon" href="../assets/Sin título.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/Sin título.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- En el head agregue el icono que se muestra en las pestañas del explorador(hice un logo pero no llegue a modificar la resolucion). Agregue el Link de bootstrap para el carousel -->
