ultimo arreglo direccionamiento favicom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO -->
-    <meta name="description" content="SOMOS UNA EMPRESA DEDICADA AL BRONCEADO EN SPRAY.">
+    <meta name="description" content="UNA EMPRESA DEDICADA AL BRONCEADO EN SPRAY. VENTA ONLINE">
     <meta name="author" content="Luciano Leone">
     <meta name="copyright" content="CasaNegra">
     <!-- opengraph -->
